2026-top-it-main/lab6/self-work/data-anonymization-lab6/app/k8s/kustomization/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sda
spec:
  ingressClassName: nginx
  rules:
    - host: sda.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sda-backend
                port:
                  name: http
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: sda-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sda-frontend
                port:
                  name: http
